--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@tanstack/react-query": "^5.66.9",
     "axios": "^1.7.9",
     "firebase": "^11.3.1",
+    "framer-motion": "^12.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "tailwindcss": "^4.0.8"
